feat: add media, new algorithm, change style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <audio class="win-sound" src="./assets/sounds/win.wav"></audio>
   <audio class="lose-sound" src="./assets/sounds/lose.wav"></audio>
   <audio class="tie-sound" src="./assets/sounds/tie.wav"></audio>
-
   <header>
     <div class="container">
       <h1>Tic-Tac-Toe</h1>
@@ -35,34 +34,37 @@
 
   <main>
 
-    <div class="start-game modal modal-open">
-      <div class="modal-window">
-        <p>Pick a symbol</p>
-        <div class="modal-btns">
-          <button class="modal-btn btn-x" onclick="startGame('X')"><i class="fa-solid fa-xmark fa-2xl"></i></button>
-          <button class="modal-btn btn-o" onclick="startGame('O')"><i class="fa-solid fa-o fa-xl"></i></button>
-          <!-- <button onclick="startGame('X')">Крестик</button>
-              <button onclick="startGame('O')">Нолик</button> -->
-        </div>
-      </div>
-    </div>
 
-
-    <div class="game-over modal modal-close">
-      <div class="modal-window">
-        <p class="result" id="result"></p>
-        <div class="modal-btns">
-          <button class="modal-btn" onclick="resetGame()">New Game</button>
-        </div>
-      </div>
-    </div>
 
     <div class="container content">
 
       <div class="board" id="board"></div>
+
+      <div class="start-game modal open">
+        <div class="modal-window">
+          <p>Pick a symbol</p>
+          <div class="modal-btns">
+            <button class="modal-btn btn-x" onclick="startGame('X')"><i class="fa-solid fa-xmark fa-2xl"></i></button>
+            <button class="modal-btn btn-o" onclick="startGame('O')"><i class="fa-solid fa-o fa-xl"></i></button>
+            <!-- <button onclick="startGame('X')">Крестик</button>
+              <button onclick="startGame('O')">Нолик</button> -->
+          </div>
+        </div>
+      </div>
+
+      <div class="game-over modal close">
+        <div class="modal-window">
+          <p class="result" id="result"></p>
+          <div class="modal-btns">
+            <button class="modal-btn" onclick="resetGame()">New Game</button>
+          </div>
+        </div>
+      </div>
+
       <div class="scorebord">
-        <h2>Results:</h2>
-        <div class="score" id="scoreboard"></div>
+        <h2 class="result-btn"><i class="fa-solid fa-arrow-down"></i> Results <i class="fa-solid fa-arrow-down"></i>
+        </h2>
+        <div class="score close" id="scoreboard"></div>
       </div>
     </div>
 
@@ -71,13 +73,13 @@
   <footer>
     <div class="container">
       <div class="footer-wraper">
-        <!-- <div class="footer-item rsschool"><a class="link" href="https://rs.school/courses/javascript-preschool-ru"
+        <div class="footer-item rsschool"><a class="link" href="https://rs.school/courses/javascript-preschool-ru"
             target="_blank" rel="noopener noreferrer"><img class="link-img" src="./assets/icons/rsschool.svg"
               alt="rsschool icon"></a>
-        </div> -->
+        </div>
         <div class="footer-item github"><a class="link" href="https://github.com/dzichonka" target="_blank"
             rel="noopener noreferrer"><img class="link-img" src="./assets/icons/github.svg" alt="github icon"></a></div>
-        <!-- <div class="footer-item year">2024</div> -->
+        <div class="footer-item year">2024</div>
       </div>
     </div>
   </footer>
