feat: fix media

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
   <footer>
     <div class="container">
       <div class="footer-wraper">
-        <div class="footer-item rsschool"><a class="link" href="https://rs.school/courses/javascript-preschool-ru"
+        <!-- <div class="footer-item rsschool"><a class="link" href="https://rs.school/courses/javascript-preschool-ru"
             target="_blank" rel="noopener noreferrer"><img class="link-img" src="./assets/icons/rsschool.svg"
               alt="rsschool icon"></a>
-        </div>
+        </div> -->
         <div class="footer-item github"><a class="link" href="https://github.com/dzichonka" target="_blank"
             rel="noopener noreferrer"><img class="link-img" src="./assets/icons/github.svg" alt="github icon"></a></div>
-        <div class="footer-item year">2024</div>
+        <!-- <div class="footer-item year">2024</div> -->
       </div>
     </div>
   </footer>
